--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
 group = 'com.alan'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+targetCompatibility = '17'
 
 repositories {
 	mavenCentral()
